# sophrosyne

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/cl/: vector_add.cl
shaders/wgsl/: atomic_fa_relaxed.wgsl  occupancy_discovery.wgsl  vector_add.wgsl
src/: easywg.rs  main.rs  shader.wgsl
src/benchmarks/: atomic_throughput.rs  mod.rs  occupancy_discovery.rs  vector_add.rs
