[package]
name = "sophrosyne"
version = "0.1.0"
edition = "2021"
# build = "build.rs" # No longer needed, but keeping in case we want to compile from CL.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = { version = "0.19.1", features = ["spirv"]}
pollster = "0.3.0"
bytemuck = "1.14.3"
flume = "0.11.0"
regex = "1.10.3"

[lib]
name = "easywg"
path = "src/easywg.rs"

[[bin]]
name = "sophrosyne"
path = "src/main.rs"

